Add NUMA + aggressive opts